--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,13 +5,20 @@
     background-size: cover;
     padding: 8rem;
     padding-top: 4rem;
-    // background-position: center;
 
     display: grid;
-    grid-template-rows: 1fr min-content 6rem 1fr;
-    grid-template-columns: max-content;
+    grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
+    grid-template-columns: minmax(min-content, max-content);
     row-gap: 1.5rem;
     justify-content: center;
+
+    @media only screen and (max-width: $bp-medium) {
+            grid-column: 1 / -1;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+        padding: 5rem;
+    }
 
     &__logo {
         height: 3rem;
@@ -46,9 +53,11 @@
         grid-template-columns: repeat(4, 1fr);
         column-gap: 3rem;
         justify-items: center;
+        align-items: center;
 
         img {
-            height: 2.5rem;
+            max-height: 2.5rem;
+            max-width: 100%;
             filter: brightness(70%);
         }
 
